--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Sleep</h2>
-									<p>I wrote a newsletter about sleeping and your GPA.</p>
+									<p>I wrote a newsletter how sleeping affects your GPA.</p>
 									<ul class="actions">
 										<li><a href="http://www.google.com" class="button">Read</a></li>
 									</ul>
