Changes in Index

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who we are</a></li>
-							<li><a href="#two">What we do</a></li>
-							<li><a href="#three">Get in touch</a></li>
+							<li><a href="#one">Freshman Files</a></li>
+							<li><a href="#two">CLE's</a></li>
+							<li><a href="#three">News & Things</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -50,10 +50,10 @@
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Sleep</h2>
-									<p>I wrote a newsletter how sleeping affects your GPA.</p>
+									<h2>Lack Of Sleep...Poor GPA</h2>
+									<p>This is a small post I wrote about the affects of minimal sleep on a college student, and specific ways to combat sleep deprivation.</p>
 									<ul class="actions">
-										<li><a href="http://www.google.com" class="button">Read</a></li>
+										<li><a href="https://tinyletter.com/edumacation" class="button">Read</a></li>
 									</ul>
 								</div>
 							</div>
@@ -62,10 +62,10 @@
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Feugiat consequat</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>New Tongues Open New Doors...Wait What?</h2>
+									<p>This is a post focusing on the important atributes learning a foreign language gives you in college.</p>
 									<ul class="actions">
-										<li><a href="#" class="button">Learn more</a></li>
+										<li><a href="https://tinyletter.com/edumacation" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -74,10 +74,11 @@
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Build A Butt-Kicking GPA</h2>
+									<p>This short informative post discusses the physical and mental benefits exercise has for you and your GPA.</p>
 									<ul class="actions">
-										<li><a href="#" class="button">Learn more</a></li>
+										<li><a href="https://tinyletter.com/edumacation" class="button">Learn more</a></li>
+										<img srchttps://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmR_SZ0KGuwahEvtAGgJMQLMmwHDst8oLRPZfMYtKDc31MVwmg alt="">
 									</ul>
 								</div>
 							</div>
