--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Freshman Files</a></li>
+							<li><a href="#one">News & Things</a></li>
 							<li><a href="#two">CLE's</a></li>
-							<li><a href="#three">News & Things</a></li>
+							<li><a href="#three">Freshman Help</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -36,10 +36,10 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Madison Stagner</h1>
-							<p>Virginia Tech double major in Creative Writing and Language and Literature.</p>
+							<h1>Edumacation</h1>
+							<p>A Virginia Tech double major in Creative Writing and Language and Literature, Madison Stagner, teamed up with other Hokies to produce a small video and podcast discussing relevant topics for current students and incoming freshman at VT. This site also includes her three bite size articles on circulating areas of interest in the college community.</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Learn more</a></li>
+								<li><a href="#one" class="button scrolly">Scroll Down</a></li>
 							</ul>
 						</div>
 					</section>
@@ -65,7 +65,7 @@
 									<h2>New Tongues Open New Doors...Wait What?</h2>
 									<p>This is a post focusing on the important atributes learning a foreign language gives you in college.</p>
 									<ul class="actions">
-										<li><a href="https://tinyletter.com/edumacation" class="button">Learn more</a></li>
+										<li><a href="https://tinyletter.com/edumacation" class="button">Read</a></li>
 									</ul>
 								</div>
 							</div>
@@ -77,7 +77,7 @@
 									<h2>Build A Butt-Kicking GPA</h2>
 									<p>This short informative post discusses the physical and mental benefits exercise has for you and your GPA.</p>
 									<ul class="actions">
-										<li><a href="https://tinyletter.com/edumacation" class="button">Learn more</a></li>
+										<li><a href="https://tinyletter.com/edumacation" class="button">Read</a></li>
 										<img srchttps://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmR_SZ0KGuwahEvtAGgJMQLMmwHDst8oLRPZfMYtKDc31MVwmg alt="">
 									</ul>
 								</div>
@@ -88,8 +88,9 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>What we do</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<h2>CLE's: A Hash Out on Importance.</h2>
+							<p>This short Podcast was a group production discussing the advantages, or disadvantages of CLE's being a mandatory requirement for undergraduate students.</p>
+							<li><a href="https://soundcloud.com/niko-milosevic-552726579/revised-an-educated-life-presents" class="button">Listen</a></li>
 							<div class="features">
 								<section>
 									<span class="icon major fa-code"></span>
