--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR3Tx7t2FYce4nLB3l-ZC3Ld_JLdTmChR3uawHtZWrRZxY-gEd5Mg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Build A Butt-Kicking GPA</h2>
