--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
 									<ul class="actions">
 										<li><a href="https://tinyletter.com/edumacation" class="button">Read</a></li>
 										<img srchttps://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmR_SZ0KGuwahEvtAGgJMQLMmwHDst8oLRPZfMYtKDc31MVwmg alt="">
+										<section>
+											<a href="#" class="image"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSuJlOya7ApDmihlkTwwOeJvJa1_gKJM3FBwV_cQADLqUpkXI_U" alt="" data-position="25% 25%" /></a>
 									</ul>
 								</div>
 							</div>
