--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
-							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<h2>Freshman Files: Tips</h2>
+							<p>This is a short video giving helpful hints to life on campus as a freshman, and things we believe as verterned Hokies will make life easier for the upcoming underclassmen.</p>
 							<div class="split style1">
 								<section>
 									<form method="post" action="#">
