Edited/Fixed image line-up

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTye2N3UVngIzix7h3bJ8Z92N9R4VVm_oyMVH6mzwl8Yl-7MBsS" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>New Tongues Open New Doors...Wait What?</h2>
@@ -71,7 +71,6 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTye2N3UVngIzix7h3bJ8Z92N9R4VVm_oyMVH6mzwl8Yl-7MBsS" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Build A Butt-Kicking GPA</h2>
@@ -80,7 +79,7 @@
 										<li><a href="https://tinyletter.com/edumacation" class="button">Read</a></li>
 										<img srchttps://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmR_SZ0KGuwahEvtAGgJMQLMmwHDst8oLRPZfMYtKDc31MVwmg alt="">
 										<section>
-											<a href="#" class="image"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSuJlOya7ApDmihlkTwwOeJvJa1_gKJM3FBwV_cQADLqUpkXI_U" alt="" data-position="25% 25%" /></a>
+											<a href="#" class="image"><img src="https://i.pinimg.com/originals/95/77/51/957751b3fc82b305be8000d2a2fdeaa9.jpg" alt="" data-position="25% 25%" /></a>
 									</ul>
 								</div>
 							</div>
