--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 							</div>
 						</section>
 						<section>
+							<a href="#" class="image"><img src="http://cdn.smosh.com/sites/default/files/ftpuploads/bloguploads/meme-doyoueven-marilyn.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Build A Butt-Kicking GPA</h2>
@@ -78,8 +79,6 @@
 									<ul class="actions">
 										<li><a href="https://tinyletter.com/edumacation" class="button">Read</a></li>
 										<img srchttps://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmR_SZ0KGuwahEvtAGgJMQLMmwHDst8oLRPZfMYtKDc31MVwmg alt="">
-										<section>
-											<a href="#" class="image"><img src="https://i.pinimg.com/originals/95/77/51/957751b3fc82b305be8000d2a2fdeaa9.jpg" alt="" data-position="25% 25%" /></a>
 									</ul>
 								</div>
 							</div>
