--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#intro">Welcome</a></li>
+							<li><a href="#intro">My, -oops, _Our_ Purpose</a></li>
 							<li><a href="#one">News & Things</a></li>
 							<li><a href="#two">CLE's</a></li>
 							<li><a href="#three">Freshman Help</a></li>
