--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 									<h2>Lack Of Sleep...Poor GPA</h2>
 									<p>This is a small post I wrote about the affects of minimal sleep on a college student, and specific ways to combat sleep deprivation.</p>
 									<ul class="actions">
-										<li><a href="https://tinyletter.com/edumacation" class="button">Read</a></li>
+										<li><a href="https://tinyletter.com/edumacation" class="button">Subscribe to Read</a></li>
 									</ul>
 								</div>
 							</div>
@@ -65,7 +65,7 @@
 									<h2>New Tongues Open New Doors...Wait What?</h2>
 									<p>This is a post focusing on the important atributes learning a foreign language gives you in college.</p>
 									<ul class="actions">
-										<li><a href="https://tinyletter.com/edumacation" class="button">Read</a></li>
+										<li><a href="https://tinyletter.com/edumacation" class="button">Subscribe to Read</a></li>
 									</ul>
 								</div>
 							</div>
@@ -77,7 +77,7 @@
 									<h2>Build A Butt-Kicking GPA</h2>
 									<p>This short informative post discusses the physical and mental benefits exercise has for you and your GPA.</p>
 									<ul class="actions">
-										<li><a href="https://tinyletter.com/edumacation" class="button">Read</a></li>
+										<li><a href="https://tinyletter.com/edumacation" class="button">Subscribe to Read</a></li>
 										<img srchttps://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmR_SZ0KGuwahEvtAGgJMQLMmwHDst8oLRPZfMYtKDc31MVwmg alt="">
 									</ul>
 								</div>
