Video Draft Added

--- a/index.html
+++ b/index.html
@@ -100,26 +100,10 @@
 						<div class="inner">
 							<h2>Freshman Files: Tips</h2>
 							<p>This is a short video giving helpful hints to life on campus as a freshman, and things we believe as verterned Hokies will make life easier for the upcoming underclassmen.</p>
-							<div class="split style1">
-								<section>
-									<form method="post" action="#">
-										<div class="field half first">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="5"></textarea>
-										</div>
-										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
-										</ul>
-									</form>
-								</section>
+							<ul class="actions">
+								<li><a href="https://drive.google.com/file/d/1Yu_kOaxgbNfiycId3aCZGxu5MAtmJMMm/view" class="button">Watch Video</a></li>
+								<img srchttps://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmR_SZ0KGuwahEvtAGgJMQLMmwHDst8oLRPZfMYtKDc31MVwmg alt="">
+							</ul>
 								<section>
 									<ul class="contact">
 										<li>
