--- a/index.html
+++ b/index.html
@@ -107,10 +107,11 @@
 								<section>
 									<ul class="contact">
 										<li>
-											<h3>Virginia Tech Phone Number</h3>
+											<h3>For Undergraduate Information Call VT @</h3>
+
 											<span>(540) 231-6267<br />
 
-										
+
 
 		<!-- Footer -->
 			<footer id="footer" class="wrapper style1-alt">
