--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Freshman Files: Tips</h2>
-							<p>This is a short video giving helpful hints to life on campus as a freshman, and things we believe as verterned Hokies will make life easier for the upcoming underclassmen.</p>
+							<p>This is a short series of videos giving helpful hints to life on campus as a freshman- the things we wish we knew as new Hokies will make life easier for the upcoming underclassmen.</p>
 							<ul class="actions">
 								<li><a href="https://drive.google.com/file/d/1Yu_kOaxgbNfiycId3aCZGxu5MAtmJMMm/view" class="button">Watch Video</a></li>
 								<img srchttps://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmR_SZ0KGuwahEvtAGgJMQLMmwHDst8oLRPZfMYtKDc31MVwmg alt="">
