--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<h1>Edumacation</h1>
 							<p>Virginia Tech double major in Creative Writing and Language and Literature, Madison Stagner, teamed up with other Hokies to produce a small video and podcast discussing relevant topics for current students and incoming freshman at VT. This site also includes her three bite size articles on circulating areas of interest in the college community.</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Scroll Down</a></li>
+								<li><a href="#one" class="button scrolly">Check It Out</a></li>
 							</ul>
 						</div>
 					</section>
