--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
 									<ul class="actions">
 										<li><a href="https://tinyletter.com/edumacation" class="button">Subscribe to Read</a></li>
 									</ul>
+
+									<ul class="actions">
+										<li><a href="http://www.bbc.com/news/magazine-16964783" class="button">More About Sleep</a></li>
+									</ul>
 								</div>
 							</div>
 						</section>
@@ -66,6 +70,10 @@
 									<p>This is a post focusing on the important atributes learning a foreign language gives you in college.</p>
 									<ul class="actions">
 										<li><a href="https://tinyletter.com/edumacation" class="button">Subscribe to Read</a></li>
+									</ul>
+
+									<ul class="actions">
+										<li><a href="https://www.duolingo.com/" class="button">Learn A Language :)</a></li>
 									</ul>
 								</div>
 							</div>
@@ -79,6 +87,10 @@
 									<ul class="actions">
 										<li><a href="https://tinyletter.com/edumacation" class="button">Subscribe to Read</a></li>
 										<img srchttps://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmR_SZ0KGuwahEvtAGgJMQLMmwHDst8oLRPZfMYtKDc31MVwmg alt="">
+									</ul>
+									
+										<ul class="actions">
+											<li><a href="https://www.inbalanceyogastudio.com/" class="button">Click me to see a Yoga Gym</a></li>
 									</ul>
 								</div>
 							</div>
