updated newsletter links

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 									<h2>Lack Of Sleep...Poor GPA</h2>
 									<p>This is a small post I wrote about the affects of minimal sleep on a college student, and specific ways to combat sleep deprivation.</p>
 									<ul class="actions">
-										<li><a href="https://tinyletter.com/edumacation" class="button">Subscribe to Read</a></li>
+										<li><a href="https://tinyletter.com/edumacation/letters/lack-of-sleep-poor-gpa" class="button">Read</a></li>
 									</ul>
 
 									<ul class="actions">
@@ -66,10 +66,10 @@
 							<a href="#" class="image"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTye2N3UVngIzix7h3bJ8Z92N9R4VVm_oyMVH6mzwl8Yl-7MBsS" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>New Tongues Open New Doors...Wait What?</h2>
+									<h2>New Tongues Open New Doors...Wait</h2>
 									<p>This is a post focusing on the important atributes learning a foreign language gives you in college.</p>
 									<ul class="actions">
-										<li><a href="https://tinyletter.com/edumacation" class="button">Subscribe to Read</a></li>
+										<li><a href="https://tinyletter.com/edumacation/letters/new-tongues-open-new-doors-wait-what" class="button">Read</a></li>
 									</ul>
 
 									<ul class="actions">
@@ -85,10 +85,10 @@
 									<h2>Build A Butt-Kicking GPA</h2>
 									<p>This short informative post discusses the physical and mental benefits exercise has for you and your GPA.</p>
 									<ul class="actions">
-										<li><a href="https://tinyletter.com/edumacation" class="button">Subscribe to Read</a></li>
+										<li><a href="https://tinyletter.com/edumacation/letters/build-a-better-butt-kicking-gpa" class="button">Read</a></li>
 										<img srchttps://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmR_SZ0KGuwahEvtAGgJMQLMmwHDst8oLRPZfMYtKDc31MVwmg alt="">
 									</ul>
-									
+
 										<ul class="actions">
 											<li><a href="https://www.inbalanceyogastudio.com/" class="button">Click me to see a Yoga Gym</a></li>
 									</ul>
