--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							<a href="#" class="image"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmR_SZ0KGuwahEvtAGgJMQLMmwHDst8oLRPZfMYtKDc31MVwmg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Lack Of Sleep...Poor GPA</h2>
+									<h2>Lack Of Sleep</h2>
 									<p>This is a small post I wrote about the affects of minimal sleep on a college student, and specific ways to combat sleep deprivation.</p>
 									<ul class="actions">
 										<li><a href="https://tinyletter.com/edumacation/letters/lack-of-sleep-poor-gpa" class="button">Read</a></li>
