--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmR_SZ0KGuwahEvtAGgJMQLMmwHDst8oLRPZfMYtKDc31MVwmg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="http://s2.quickmeme.com/img/87/87f645da6a03303bfe33386183fd554a5eb35edd86ad12f9100ec1b4a4af4d47.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Lack Of Sleep</h2>
@@ -63,7 +63,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTye2N3UVngIzix7h3bJ8Z92N9R4VVm_oyMVH6mzwl8Yl-7MBsS" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="https://media.makeameme.org/created/what-language-is-xevw3g.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>New Tongues Open New Doors...Wait</h2>
@@ -79,7 +79,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="http://cdn.smosh.com/sites/default/files/ftpuploads/bloguploads/meme-doyoueven-marilyn.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="https://www.askideas.com/media/36/Wait-You-Are-Telling-Me-Exercise-Is-Good-For-Me-Funny-Meme-Photo.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Build A Butt-Kicking GPA</h2>
