link update to final video stream

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 							<h2>Freshman Files: Tips</h2>
 							<p>This is a short series of videos giving helpful hints to life on campus as a freshman- the things we wish we knew as new Hokies will make life easier for the upcoming underclassmen.</p>
 							<ul class="actions">
-								<li><a href="https://www.youtube.com/watch?v=5vXlslW2Mv0&index=2&list=PL10Xy5MMDw2QYqXwTE082mpQ7cvpN5KHT" class="button">Watch Video</a></li>
+								<li><a href="https://www.youtube.com/watch?v=BofHrD8hQZQ&list=PL10Xy5MMDw2QYqXwTE082mpQ7cvpN5KHT&index=1" class="button">Watch Video</a></li>
 								<img srchttps://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmR_SZ0KGuwahEvtAGgJMQLMmwHDst8oLRPZfMYtKDc31MVwmg alt="">
 							</ul>
 								<section>
