--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Lack Of Sleep</h2>
-									<p>This is a small post I wrote about the affects of minimal sleep on a college student, and specific ways to combat sleep deprivation.</p>
+									<p>This is a small post about the affects of minimal sleep on a college student, and specific ways to combat sleep deprivation.</p>
 									<ul class="actions">
 										<li><a href="https://tinyletter.com/edumacation/letters/lack-of-sleep-poor-gpa" class="button">Read</a></li>
 									</ul>
