Added peer work

--- a/index.html
+++ b/index.html
@@ -123,6 +123,23 @@
 
 											<span>(540) 231-6267<br />
 
+												<!-- Four -->
+												<section id="four" class="wrapper style1 fade-up">
+													<div class="inner">
+														<h2> See Her Groups Work</h2>
+														<p> See the work from work from Madison Stagner's team. Juilianna Hill, Daniel Han, and Niko Milosevic.</p>
+														<ul class="actions">
+															<li><a
+																href="https://tinyletter.com/edumacation/letters/newsletter"
+																class="button">Click Me To Read Niko's 'College & Money'</a></li>
+																<li><a
+																	href="https://tinyletter.com/edumacation/letters/it-s-not-all-rainbows-and-butterflies-how-to-maintain-mental-health-while-studying-abroad"
+																	class="button">Click Me To Read Juilianna's 'It's Not All Rainbows</a></li>
+																	<li><a
+																		href="https://tinyletter.com/edumacation/letters/a-tale-of-notes"
+																		class="button">Click Me To Read Daniel's 'Take on Notes'</a></li>
+
+
 
 
 		<!-- Footer -->
