--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 							<li><a href="#one">News & Things</a></li>
 							<li><a href="#two">CLE's</a></li>
 							<li><a href="#three">Freshman Help</a></li>
+							<li><a href="#Four">Check Out The Group</a></li>
+							<li><a href="#Five">UnderGrad Info</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -116,18 +118,11 @@
 								<li><a href="https://www.youtube.com/watch?v=BofHrD8hQZQ&list=PL10Xy5MMDw2QYqXwTE082mpQ7cvpN5KHT&index=1" class="button">Watch Video</a></li>
 								<img srchttps://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmR_SZ0KGuwahEvtAGgJMQLMmwHDst8oLRPZfMYtKDc31MVwmg alt="">
 							</ul>
-								<section>
-									<ul class="contact">
-										<li>
-											<h3>For Undergraduate Information Call VT @</h3>
-
-											<span>(540) 231-6267<br />
-
 												<!-- Four -->
 												<section id="four" class="wrapper style1 fade-up">
 													<div class="inner">
-														<h2> See Her Groups Work</h2>
-														<p> See the work from work from Madison Stagner's team. Juilianna Hill, Daniel Han, and Niko Milosevic.</p>
+														<h2> What Else?</h2>
+														<p> See the work from Madison Stagner's team. Juilianna Hill, Daniel Han, and Niko Milosevic.</p>
 														<ul class="actions">
 															<li><a
 																href="https://tinyletter.com/edumacation/letters/newsletter"
@@ -138,6 +133,14 @@
 																	<li><a
 																		href="https://tinyletter.com/edumacation/letters/a-tale-of-notes"
 																		class="button">Click Me To Read Daniel's 'Take on Notes'</a></li>
+
+																		<!-- Five -->
+																		<section>
+																			<ul class="contact">
+																				<li>
+																					<h3>Virginia Tech provides an amazing atmosphere for learning and creating new connection with people from all over the world! Any student interested in joining the Hokie Nation already has a good head on their shoulders, so they should follow their calling and contact VT. The classes are fun and challenging and the students are warm and inviting.</h3>
+
+																					<span>(540) 231-6267<br />
 
 
 
