--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
 																		href="https://tinyletter.com/edumacation/letters/a-tale-of-notes"
 																		class="button">Click Me To Read Daniel's 'Take on Notes'</a></li>
 																		<br></br>
+																	</div>
+																</section>																		
 																		<!-- Five -->
 																		<section>
 																			<ul class="contact">
