--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 							<h2>Freshman Files: Tips</h2>
 							<p>This is a short series of videos giving helpful hints to life on campus as a freshman- the things we wish we knew as new Hokies will make life easier for the upcoming underclassmen.</p>
 							<ul class="actions">
-								<li><a href="https://www.youtube.com/watch?v=BofHrD8hQZQ&list=PL10Xy5MMDw2QYqXwTE082mpQ7cvpN5KHT&index=1" class="button">Watch Video</a></li>
+								<li><a href="https://www.youtube.com/watch?v=BofHrD8hQZQ&list=PL10Xy5MMDw2QYqXwTE082mpQ7cvpN5KHT&index=1" class="button">Watch</a></li>
 								<img srchttps://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmR_SZ0KGuwahEvtAGgJMQLMmwHDst8oLRPZfMYtKDc31MVwmg alt="">
 							</ul>
 							<br></br>
@@ -126,15 +126,15 @@
 														<ul class="actions">
 															<li><a
 																href="https://tinyletter.com/edumacation/letters/newsletter"
-																class="button">Click Me To Read Niko's 'College & Money'</a></li>
+																class="button">Read Niko's 'College & Money'</a></li>
 																<br></br>
 																<li><a
 																	href="https://tinyletter.com/edumacation/letters/it-s-not-all-rainbows-and-butterflies-how-to-maintain-mental-health-while-studying-abroad"
-																	class="button">Click Me To Read Juilianna's 'It's Not All Rainbows</a></li>
+																	class="button">Read Juilianna's 'It's Not All Rainbows</a></li>
 																	<br></br>
 																	<li><a
 																		href="https://tinyletter.com/edumacation/letters/a-tale-of-notes"
-																		class="button">Click Me To Read Daniel's 'Take on Notes'</a></li>
+																		class="button">Read Daniel's 'Take on Notes'</a></li>
 																		<br></br>
 																	</div>
 																</section>
@@ -144,7 +144,7 @@
 																				<li>
 																					<h3>Virginia Tech provides an amazing atmosphere for learning and creating new connection with people from all over the world! Any student interested in joining the Hokie Nation already has a good head on their shoulders, so they should follow their calling and contact VT. The classes are fun and challenging and the students are warm and inviting.</h3>
 
-																					<span>(540) 231-6267<br />
+																					<span>Virginia Tech UnderGraduate Admissions Office: (540) 231-6267<br />
 
 
 
