--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 									</ul>
 
 										<ul class="actions">
-											<li><a href="https://www.inbalanceyogastudio.com/" class="button">Click me to see a Yoga Gym</a></li>
+											<li><a href="https://www.inbalanceyogastudio.com/" class="button">See a Yoga Gym</a></li>
 									</ul>
 								</div>
 							</div>
