fix of dot next to 'listen'

--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@
 						<div class="inner">
 							<h2>CLE's: A Hash Out on Importance.</h2>
 							<p>This short Podcast was a group production discussing the advantages, or disadvantages of CLE's being a mandatory requirement for undergraduate students.</p>
+							<ul class="actions">
 							<li><a href="https://soundcloud.com/niko-milosevic-552726579/revised-an-educated-life-presents" class="button">Listen</a></li>
+						</ul>
 
 						</div>
 					</section>
